<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp"
    android:id="@+id/sortingDialogRootView">

    <RadioGroup
        android:id="@+id/sortingModeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/sortingModeByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_dialog_mode_name"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/sortingModeBySize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_dialog_mode_size" />

        <RadioButton
            android:id="@+id/sortingModeByMTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_dialog_mode_m_time" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/reverseOrderCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/sortingModeSelector"
        android:text="@string/sorting_dialog_flag_reverse_order" />

    <CheckBox
        android:id="@+id/foldersFirstCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/reverseOrderCheckbox"
        android:checked="true"
        android:text="@string/sorting_dialog_flag_folders_first" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/sortingModeSelector"
        android:layout_marginTop="4dp"
        android:text="@string/sorting_dialog_button_apply" />

</RelativeLayout>